applications/opengist/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opengist
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: opengist
  template:
    metadata:
      labels:
        app: opengist
    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: opengist
          image: ghcr.io/thomiceli/opengist:latest@sha256:0bfceefe34421723088a1df598cd1d6430489211bf0179802d5358c13c0c2525
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6157
            - containerPort: 2222
          volumeMounts:
            - name: opengist-storage
              mountPath: /opengist
      volumes:
        - name: opengist-storage
          persistentVolumeClaim:
            claimName: opengist-pvc
