applications/opengist/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opengist
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: opengist-opengist-http-https-middleware@kubernetescrd
spec:
  tls:
    - hosts:
        - opengist.tryrocket.cloud
      secretName: tryrocket-cloud-http-tls
  rules:
    - host: opengist.tryrocket.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opengist
                port:
                  number: 80
